testsuite/tests/backpack/should_fail/bkpfail01.stderr
[1 of 3] Processing p
  [1 of 3] Compiling H[boot]          ( p/H.hs-boot, nothing )
  [2 of 3] Compiling H[merge]         ( p/H.hs-boot-merge, nothing )
  [3 of 3] Compiling A                ( p/A.hs, nothing )
[2 of 3] Processing q
  [1 of 1] Compiling H                ( q/H.hs, nothing )
  Instantiating q()
  [1 of 1] Compiling H                ( q/H.hs, nothing )
[3 of 3] Processing r

bkpfail01.bkp:14:5: error:
    Cannot use module q@Br2hqQttvyiBkpnTZJaMkb:H to instantiate hole at H
    Missing implementations of: H, H
